--- a/electron/src/index.ejs
+++ b/electron/src/index.ejs
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>PiSugar Power Management</title>
+    <link rel="icon" href="http://cdn.pisugar.com/web/favicon32.ico">
     <% if (htmlWebpackPlugin.options.nodeModules) { %>
       <!-- Add `node_modules/` to global paths so `require` works properly in development -->
       <script>
