--- a/electron/src/index.ejs
+++ b/electron/src/index.ejs
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
     <title>PiSugar Power Management</title>
     <link rel="icon" href="http://cdn.pisugar.com/web/favicon32.ico">
     <% if (htmlWebpackPlugin.options.nodeModules) { %>
